--- a/WebFiles/style.css
+++ b/WebFiles/style.css
@@ -4,6 +4,8 @@
   --whiteColor: #f0efed;
   --blackColor: #080b1b;
   --redColorHover: #c62828;
+  --greenColorHover: #449e48;
+  --yellowColorHover: #e6b400;
 }
 
 * {
@@ -15,11 +17,13 @@
 body {
   width: 100dvw;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .HeaderDiv {
+  position: relative;
   width: 100%;
-  height: 70dvh;
+  height: 80dvh;
   background: url(../Attachments/Backgrounds/pexels-nathan-j-hilton-9244882.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,11 +38,13 @@ body {
 nav {
   top: 15px;
   width: 90%;
+  height: 50px;
   position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--whiteColor);
+  z-index: 999;
 }
 
 nav ul {
@@ -60,16 +66,31 @@ nav ul li a:hover {
   color: var(--redColorHover);
   transition-duration: 0.25s;
   transition-timing-function: ease-in-out;
+  text-decoration: underline;
+}
+
+.dropdownlist {
+  margin: 0;
+  display: none;
+  flex-direction: column;
+  background-color: var(--whiteColor);
+  padding: 15px;
+  position: absolute;
+  top: 50px;
+  transform: translateX(-10px);
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+.dropdownlist li {
+  font-weight: bold;
+  font-size: 1.25em;
 }
 
 .leftNav li {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.dropdownlist {
-  display: none;
 }
 
 .HeaderText {
@@ -98,19 +119,44 @@ nav ul li a:hover {
 }
 
 .headerbutton {
+  position: absolute;
   cursor: pointer;
   background-color: transparent;
   border: none;
+  bottom: 0;
 }
 
-.headerbutton img {
-  width: 100px;
+.btnheader {
+  fill: var(--whiteColor);
+}
+
+.btnheader:hover {
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s;
+  width: 120px;
+  height: 120px;
+  fill: var(--redColorHover);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  padding: 50px;
+  display: grid;
+  grid-template-columns: 500px 500px;
+  gap: 15px;
+  place-items: center;
+  align-items: flex-start;
 }
 
 .card {
   display: block;
-  width: 500px;
-  border: 1px solid red;
+  width: 400px;
   position: relative;
 }
 
@@ -118,12 +164,42 @@ nav ul li a:hover {
   width: 100%;
 }
 
-.card span {
+.preO,
+.availO,
+.outFStk {
+  color: white;
   padding: 5px;
   font-size: 15px;
   position: absolute;
   font-weight: bold;
-  background-color: var(--redColorHover);
   right: 0;
   top: 15px;
+}
+
+.preO {
+  background-color: var(--redColorHover);
+}
+
+.availO {
+  background-color: var(--greenColorHover);
+}
+
+.outFStk {
+  background-color: var(--yellowColorHover);
+}
+
+.cardContent {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.productName {
+  font-size: 1.25em;
+}
+
+.priceTag {
+  opacity: 0.75;
 }
