--- a/WebFiles/style.css
+++ b/WebFiles/style.css
@@ -69,7 +69,8 @@ nav ul li a:hover {
   text-decoration: underline;
 }
 
-.dropdownlist {
+.dropdownlistOne,
+.dropdownlistTwo {
   margin: 0;
   display: none;
   flex-direction: column;
@@ -82,7 +83,8 @@ nav ul li a:hover {
   transition-timing-function: ease-in-out;
 }
 
-.dropdownlist li {
+.dropdownlistOne li,
+.dropdownlistTwo li {
   font-weight: bold;
   font-size: 1.25em;
 }
