--- a/WebFiles/style.css
+++ b/WebFiles/style.css
@@ -95,6 +95,23 @@ nav ul li a:hover {
   gap: 10px;
 }
 
+.sideMenuBtn {
+  display: none;
+}
+
+.sideMenuBtn svg {
+  fill: var(--blackColor);
+}
+
+.sidemenu {
+  display: none;
+  position: fixed;
+  right: 0;
+  background-color: #c62828;
+  height: 100dvh;
+  width: 500px;
+}
+
 .HeaderText {
   justify-self: center;
   align-self: center;
@@ -254,4 +271,36 @@ main {
 
 .slider-nav a:hover {
   opacity: 1;
+}
+
+@media only screen and (max-width: 1023px) {
+  nav {
+    width: 100%;
+    top: 0;
+  }
+
+  .rightNav li:not(.currency):not(.cart) {
+    display: none;
+  }
+
+  .sideMenuBtn {
+    display: inline-block;
+    border: none;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+
+  .card {
+    width: 550px;
+  }
+
+  .wrapper {
+    gap: 25px;
+  }
+
+  .slider-wrapper {
+    max-width: 85dvw;
+  }
 }
