--- a/WebFiles/style.css
+++ b/WebFiles/style.css
@@ -104,9 +104,6 @@ nav ul li a {
   fill: var(--blackColor);
 }
 
-.disableonclick {
-}
-
 .sidemenu {
   display: block;
   position: fixed;
@@ -117,6 +114,15 @@ nav ul li a {
   background-color: var(--whiteColor);
   box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
   z-index: 1000;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: opacity 0.3s ease, transform 0.3s ease; /
+}
+
+.sidemenu.show {
+  /* Show state */
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .sidemenuNav {
@@ -135,6 +141,7 @@ nav ul li a {
   fill: var(--blackColor);
 }
 .sidemenuNav li:hover {
+  border-radius: 5px;
   background-color: hsla(0, 0%, 25%, 0.5);
 }
 
